// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Menu Popover component > should render and close Popover based on any element with data-close-menu="true" click and match snapshot 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-1 el-menu"
  >
    <button
      aria-expanded="true"
      aria-haspopup="true"
      role="button"
    >
      Trigger
    </button>
    <div
      class="mocked-styled-0 el-menu-popover"
      data-open="true"
      style="top: 4px;"
    >
      <div
        class="mocked-styled-2 el-menu-list"
        role="menu"
      >
        <button
          class="mocked-styled-5 el-menu-item-button"
          data-close-menu="true"
          role="menuitem"
        >
          <div
            class="mocked-styled-3 el-menu-item-content"
          >
            <span
              class="mocked-styled-4 el-menu-item-label"
            >
              Menu Item
            </span>
          </div>
        </button>
        <button
          class="mocked-styled-5 el-menu-item-button"
          data-close-menu="false"
          role="menuitem"
        >
          <div
            class="mocked-styled-3 el-menu-item-content"
          >
            <span
              class="mocked-styled-4 el-menu-item-label"
            >
              Non closing Menu Item
            </span>
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu Popover component > should render and close Popover based on any element with data-close-menu="true" click and match snapshot 2`] = `
<DocumentFragment>
  <div
    class="mocked-styled-1 el-menu"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      role="button"
    >
      Trigger
    </button>
    <div
      class="mocked-styled-0 el-menu-popover"
      data-open="false"
      style="top: 4px;"
    >
      <div
        class="mocked-styled-2 el-menu-list"
        role="menu"
      >
        <button
          class="mocked-styled-5 el-menu-item-button"
          data-close-menu="true"
          role="menuitem"
        >
          <div
            class="mocked-styled-3 el-menu-item-content"
          >
            <span
              class="mocked-styled-4 el-menu-item-label"
            >
              Menu Item
            </span>
          </div>
        </button>
        <button
          class="mocked-styled-5 el-menu-item-button"
          data-close-menu="false"
          role="menuitem"
        >
          <div
            class="mocked-styled-3 el-menu-item-content"
          >
            <span
              class="mocked-styled-4 el-menu-item-label"
            >
              Non closing Menu Item
            </span>
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
